# ipsuite-core

./: .pre-commit-config.yaml  README.md  pyproject.toml
ipsuite_core/: __init__.py
ipsuite_core/base/: __init__.py  base.py  selection.py
ipsuite_core/fields/: __init__.py  atoms.py
ipsuite_core/protocol/: __init__.py  protocols.py
