[tool.poetry]
name = "ipsuite-core"
version = "0.1.0"
description = "core functionality and base classes for IPSuite"
authors = ["zincwarecode <zincwarecode@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"

[tool.poetry.urls]
documentation = "https://ipsuite.readthedocs.io"
repository = "https://github.com/zincware/ipsuite-core"

[tool.poetry.dependencies]
python = "^3.10"
ZnTrack = "^0.7.2"
znh5md = "^0.1.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.codespell]
ignore-words-list = "dscribe"
skip = "poetry.lock,ipsuite/static_data/*,docs/source/examples/06_Bootstrapping_Datasets.ipynb"

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["A", "B", "C", "E", "F", "I", "C90", "C4", "TID", "PTH", "D", "S"]
ignore = ["D203", "D213"]

[tool.black]
line-length = 90
preview = true
